welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:6: error: reassignment to val
	} else if (negative=false)
                           ^posNeg:6: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (negative=false)
               ^